<resources>
    <string name="app_name">Security app</string>
    <string name="open_when_you_are_on_a_potentially_dangerous_journey">Open when you are on a potentially dangerous journey</string>
    <string name="guard">GUARD</string>
    <string name="in_case_of_emergency_keep_telling_family_members_to_contact_me">In case of emergency , keep telling family members to contact me</string>
    <string name="sos">SOS</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="security">Security</string>
    <string name="my_family">My Family</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>