<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3DDDD"
    tools:context=".GuardScreen">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="272dp"
        android:layout_height="54dp"
        android:text="@string/security"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64"
        tools:ignore="TextSizeCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="400dp"
        android:layout_height="166dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:cardBackgroundColor="#64D3C8"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:cardMaxElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="173dp"
            android:layout_height="150dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo2"
            app:srcCompat="@drawable/security"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="260dp"
            android:layout_height="83dp"
            android:layout_marginTop="50dp"
            android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/guard"
            android:textColor="#F4EFEF"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="400dp"
        android:layout_height="166dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:cardBackgroundColor="#ed7079"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:cardMaxElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145"
        tools:ignore="DuplicateIds">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="496dp"
            android:layout_height="150dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/sos"
            tools:ignore="ImageContrastCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="260dp"
            android:layout_height="83dp"
            android:layout_marginTop="50dp"
            android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
            android:textColor="#EDF7FD"
            android:textSize="22sp"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/sos"
            android:textColor="#EFE6E3"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>